# napari-cardio-bio-eval

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari-hub/: DESCRIPTION.md
src/nanobio_core/epic_cardio/: measurement_load.py  processing.py
src/napari_cardio_bio_eval/: __init__.py  _reader.py  _widget.py  napari.yaml  peak_detection_widget.py  segmentation_widget.py  widget_utils.py
src/napari_cardio_bio_eval/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
