[project]
name = "napari-cardio-bio-eval"
dynamic = ["version"]
description = "The evaluation of the epic cardio biosensor integrated into napari"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Nanobiosensorics"},
  {email = "horvath.robert@energia.mta.hu"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib==3.8",
    "napari",
    "opencv-python",
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "napari",
    "pyqt5",
]

[project.entry-points."napari.manifest"]
napari-cardio-bio-eval = "napari_cardio_bio_eval:napari.yaml"



[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "napari_cardio_bio_eval.__init__.__version__"}

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311']

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py310"
fix = true
