[metadata]
name = napari-cardio-bio-eval
author = Nanobiosensorics
author_email = horvath.robert@energia.mta.hu
license = BSD-3
description = Nanobiosensorics cardio biosensor evaluation plugin.
url = https://github.com/Nanobiosensorics/napari-cardio-bio-eval
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
	Framework :: napari

[options]
packages = find:
install_requires = 
	napari
	napari-plugin-engine>=0.1.4
	matplotlib==3.8
	opencv-python
	
include_package_data = True
python_requires = >=3.10

[options.entry_points]
napari.manifest = 
	napari-cardio-bio-eval = napari_cardio_bio_eval:napari.yaml

[options.extras_require]
docs = 
	sphinx>=3.0
	sphinxcontrib-apidoc
	sphinx_rtd_theme
	sphinx-prompt
	sphinx-autodoc-typehints
testing = 
    tox
    pytest
    pytest-cov
    pytest-qt
    napari
    pyqt5

[aliases]
test = pytest

[options.package_data]
napari_cardio_bio_eval = napari.yaml

[options.packages.find]
exclude =
    tests
    tests.*

